fixed max value on mobile breakpoint

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,7 +32,7 @@
           align-items: center;
 }
 
-@media screen and (max-width: 510px) and (max-height: 823px) and (orientation: portrait) {
+@media screen and (max-width: 414px) and (max-height: 823px) and (orientation: portrait) {
   body {
     font-family: "Dosis", sans-serif;
     padding-top: 60px;
