--- a/static/scss/_partials/_portrait-mobile.scss
+++ b/static/scss/_partials/_portrait-mobile.scss
@@ -1,9 +1,8 @@
-@media screen and (max-width: 510px) and (max-height: 823px) and (orientation: portrait) {
+@media screen and (max-width: 414px) and (max-height: 823px) and (orientation: portrait) {
 
     // fontsize definitions
     $delPopupFontSize: 4vw;
 
-    // max-width: 414px!!
     body {
         font-family: $dosisFont;
         padding-top: 60px;
